# dioxus-playground

./: .env.example  .gitignore  Cargo.toml  Dioxus.toml  README.md  build.rs  run.sh  rustfmt.toml
assets/: main.css  tailwind.css
cookbook/: book.toml
cookbook/src/: SUMMARY.md  advanced.md  assets.md  browser.md  concepts.md  css.md  elements.md  rsx.md
src/: async_await.rs  blog.rs  counter.rs  custom_dropdown.rs  faq.rs  home.rs  img_gen.rs  main.rs  sharing_state.rs
