[package]
name = "playg"
description = "My Playground for Dioxus"
version = "0.1.0"
authors = ["Abhijit Roy <dalvath3700@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
# daisy_rsx = "0.1.6"
# dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "09066dd334adfbe14da94faf789dde0561880c3d", features = ["web", "router"] }
dioxus = { git = "https://github.com/DioxusLabs/dioxus", rev = "09066dd334adfbe14da94faf789dde0561880c3d", features = ["web", "desktop", "router"] }
dioxus-logger = "0.5.1"
dummy-json-rs = "1.0.2"
manganis = "0.2.2"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
