[package]
name = "playg"
description = "My Playground for Dioxus"
version = "0.1.0"
authors = ["Abhijit Roy <dalvath3700@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = "1.13.0"
dioxus = { version = "0.6.3", features = ["router"] }
dioxus-logger = "0.6.2"
dummy-json-rs = "1.0.2"
manganis = "0.6.2"
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
